--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,12 +2,12 @@
 
 ---
 
-<header>
+<nav>
     <h1>Hello world!</h1>
-</header>
+</nav>
 
 <style>
-    header {
+    nav {
         margin: 0;
         background-color: var(--background);
         color: var(--primary-text);
