--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -35,17 +35,20 @@
         --border-dark: #2c3628;
     }
 
-    html, body {
+    *{
         margin: 0;
         padding: 0;
     }
 
     body {
-        background: linear-gradient(
+        background-image: linear-gradient(
             to bottom right,
             var(--primary-red) 50%,
             var(--primary-green) 50%
         );
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-color: var(--primary-red);
         color: white;
         height: 100dvh;
     }
