--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro"
-import Header from "@/components/Header.astro"
+import Section from "@/components/Section.astro"
+import Navigation from "@/components/Navigation.astro"
 ---
 
 <BaseLayout>
-	<Header />
+	<Section />
+	<Navigation />
 </BaseLayout>
 
 
