--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,13 +3,55 @@
 ---
 
 <nav>
-    <h1>Hello world!</h1>
+    <ul>
+        <li>Combos</li>
+        <li>Porções</li>
+        <li>Fritas</li>
+        <li>Baurus</li>
+        <li>Bebidas</li>
+        <li>Bebidas Alcoólicas</li>
+        <li>Doses</li>
+        <li>Drinks</li>
+        <li>Drinks Sem Álcool</li>
+    </ul>
 </nav>
 
-<style>
+<style lang="scss">
+    $small: 500px;
+
     nav {
         margin: 0;
         background-color: var(--background);
         color: var(--primary-text);
+
+        ul {
+            background-color: var(--card);
+            overflow: auto;
+            white-space: nowrap;
+            padding: 10px;
+            height: 100%;
+            text-align: center;
+
+            li {
+                border: 1px solid rgba(23, 38, 15, 0.3);
+                border-radius: 5px;
+                padding: 5px;
+                font-weight: bold;
+
+                &:not(:last-child) {
+                    margin-right: 15px;
+                }
+
+                &:hover {
+                    background-color: #cfcfcd;
+                    cursor: pointer;
+                }
+            }
+        }
+
+        ul li {
+            display: inline-block;
+            text-align: center;
+        }
     }
 </style>
