--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<html lang="en">
+<html lang="pt-br">
     <head>
         <meta charset="utf-8" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -18,10 +18,10 @@
 
 <style is:global>
     :root {
-        --primary-red: #ad1c11;
-        --primary-green: #125b22;
+        --primary-red: #b23834;
+        --primary-green: #3A8760;
         --primary-text: #17260f;
-        --background: #f2f1e8;
+        --background: #ffffe4;
         --card: #ebe9d8;
         --emphasis: #d4a231;
         --border: #d1cfbd;
@@ -41,14 +41,7 @@
     }
 
     body {
-        background-image: linear-gradient(
-            to bottom right,
-            var(--primary-red) 50%,
-            var(--primary-green) 50%
-        );
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-color: var(--primary-red);
+        background-color: var(--background);
         color: white;
         height: 100dvh;
     }
