--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -3,18 +3,80 @@ import logo from "../images/logo.png";
 ---
 
 <section>
-    <img src={logo.src} />
+    <div class="content">
+        <img src={logo.src} />
+    </div>
 </section>
 
-<style>
+<style lang="scss">
     section {
-        background-image: url("../images/imageSection.jpeg");
+        position: relative;
         background-size: cover;
         background-position: center;
         display: flex;
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 300px;
+        min-width: 80%;
+        height: 80%;
+        overflow: hidden;
+
+        @media screen and (min-width: 501px) {
+            background-image: url("../images/imageSection.jpeg");
+        }
+
+        &::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+            z-index: 1;
+            pointer-events: none;
+            transition: opacity 0.3s ease;
+            opacity: 0;
+        }
+
+        .content {
+            position: relative;
+            z-index: 2;
+            color: white;
+            text-align: center;
+        }
+
+        @media screen and (max-width: 500px) {
+            &::before {
+                opacity: 0.8;
+                background: linear-gradient(
+                    to top right,
+                    #ad1c11 50%,
+                    #3a8760 50%
+                );
+
+                backdrop-filter: grayscale(100%);
+                -webkit-backdrop-filter: grayscale(100%);
+
+                mask-image: linear-gradient(
+                    to bottom,
+                    black 15%,
+                    black 90%,
+                    transparent
+                );
+                -webkit-mask-image: linear-gradient(
+                    to bottom,
+                    black 15%,
+                    black 90%,
+                    transparent
+                );
+            }
+            section {
+                background-image: none;
+            }
+        }
+
+        img {
+            max-width: 90%;
+            min-width: 75%;
+            position: relative;
+            z-index: 2;
+        }
     }
 </style>
