content menu initialization

--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -18,7 +18,7 @@ import logo from "../images/logo.png";
         align-items: center;
         width: 100%;
         min-width: 80%;
-        height: 80%;
+        height: 90dvh;
         overflow: hidden;
 
         @media screen and (min-width: 501px) {
