--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -42,7 +42,6 @@
 
     body {
         background-color: var(--background);
-        color: white;
-        height: 100dvh;
+        color: #e4e8df;
     }
 </style>
