--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -22,7 +22,7 @@
 
     nav {
         margin: 0;
-        color: var(--text-dark);
+        height: 5dvh;
 
         ul {
             overflow: auto;
